--- a/index.html
+++ b/index.html
@@ -22,49 +22,18 @@
 
   <!-- Custom Styles -->
   <style>
-    body {
-      font-family: 'Poppins',sans-serif;
-      background: linear-gradient(135deg,#0f0c29,#302b63,#24243e);
-      color:#e0e0e0;
-    }
-    .section-title {
-      font-size:2.75rem;
-      font-weight:800;
-      border-bottom:3px solid #FFD700;
-      display:inline-block;
-      margin-bottom:1.5rem;
-      color:#FFD700;
-    }
+    body { font-family: 'Poppins',sans-serif; background: linear-gradient(135deg,#0f0c29,#302b63,#24243e); color:#e0e0e0; }
+    .section-title { font-size:2.75rem; font-weight:800; border-bottom:3px solid #FFD700; display:inline-block; margin-bottom:1.5rem; color:#FFD700; }
     .icon:hover { transform:scale(1.2); transition:0.3s ease-in-out; }
-    .header-background {
-      background:url('abc/59271.jpg') no-repeat center center;
-      background-size:cover;
-    }
-    .glass-card {
-      background:rgba(255,255,255,0.05);
-      backdrop-filter:blur(12px);
-      border:1px solid rgba(255,255,255,0.1);
-      box-shadow:0 6px 30px rgba(0,0,0,0.4);
-      transition:0.3s ease;
-    }
-    .glass-card:hover {
-      transform:scale(1.03);
-      box-shadow:0 8px 40px rgba(255,255,255,0.1);
-    }
+    .header-background { background:url('abc/59271.jpg') no-repeat center center; background-size:cover; }
+    .glass-card { background:rgba(255,255,255,0.05); backdrop-filter:blur(12px); border:1px solid rgba(255,255,255,0.1); box-shadow:0 6px 30px rgba(0,0,0,0.4); transition:0.3s ease; }
+    .glass-card:hover { transform:scale(1.03); box-shadow:0 8px 40px rgba(255,255,255,0.1); }
     a:hover { color:#00FFE0; }
-    .blinking-cursor {
-      font-weight:600;
-      font-size:1.1em;
-      color:#FFD700;
-      animation: blink 1s step-end infinite;
-    }
+    .blinking-cursor { font-weight:600; font-size:1.1em; color:#FFD700; animation: blink 1s step-end infinite; }
     @keyframes blink { from,to { opacity:0 } 50% { opacity:1 } }
   </style>
 </head>
-
 <body>
-
-  <!-- Header -->
   <header class="header-background text-white py-20" data-aos="fade-down">
     <div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row items-center space-y-8 md:space-y-0 md:space-x-10">
       <img src="abc/1725428819340 (1).jpg" alt="Prasad S. Ghavghave" class="w-40 h-40 rounded-full border-4 shadow-lg" style="border-color:#FFD700;">
@@ -77,10 +46,7 @@
     </div>
   </header>
 
-  <!-- Main Content -->
   <main class="max-w-6xl mx-auto px-6 mt-14 space-y-20">
-
-    <!-- About -->
     <section id="about" data-aos="fade-up">
       <h2 class="section-title">About Me</h2>
       <p class="text-gray-300 leading-relaxed text-lg">
@@ -88,7 +54,6 @@
       </p>
     </section>
 
-    <!-- Skills -->
     <section id="skills" data-aos="zoom-in-up">
       <h2 class="section-title text-center">Skills</h2>
       <p class="text-center text-gray-400 mb-10">Technologies & Tools I Use Most</p>
@@ -102,7 +67,6 @@
       </div>
     </section>
 
-    <!-- Projects -->
     <section id="projects" data-aos="fade-up">
       <h2 class="section-title text-center">Projects</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
@@ -127,7 +91,6 @@
       </div>
     </section>
 
-    <!-- Publications -->
     <section id="publications" data-aos="fade-up">
       <h2 class="section-title text-center">Publications</h2>
       <div class="glass-card p-6 rounded-xl text-white">
@@ -136,34 +99,34 @@
           <em>2025 International Conference on Machine Learning and Autonomous Systems (ICMLAS), IEEE</em><br/>
           pp. 1926–1932, March 10, 2025.
         </p>
-        <a href="https://scholar.google.com/citations?user=5gWoDTUAAAAJ&hl=en" target="_blank" class="font-semibold">View Publication</a>
+        <a href="https://scholar.google.com/citations?user=5gWoDTUAAAAJ&hl=en"
+           target="_blank" class="font-semibold">View Publication</a>
       </div>
     </section>
 
-    <!-- CV -->
     <section id="cv" data-aos="flip-down">
       <h2 class="section-title text-center">My CV</h2>
       <div class="glass-card p-6 rounded-xl text-center">
         <img src="abc/abcd.PNG" alt="CV of Prasad S. Ghavghave" class="w-full rounded-lg shadow-lg mb-4"/>
         <p class="text-gray-300">Click below to download my CV.</p>
         <div class="mt-4">
-          <a href="https://drive.google.com/file/d/1n42tHBtU7PAj5cBehdqWsEfujGSJ7Plk/view?usp=sharing" target="_blank"
+          <a href="https://drive.google.com/file/d/1n42tHBtU7PAj5cBehdqWsEfujGSJ7Plk/view?usp=sharing"
+             target="_blank"
              class="py-2 px-5 font-bold rounded-lg shadow"
              style="background-color:#FFD700; color:#1e1e2f;">Download My CV</a>
         </div>
       </div>
     </section>
 
-    <!-- Contact -->
     <section id="contact" data-aos="zoom-in">
       <h2 class="section-title text-center">📬 Contact Me</h2>
       <div class="grid md:grid-cols-2 gap-10 mt-10">
         <div class="space-y-4 text-lg">
-          <p><i class="fas fa-envelope icon" style="color:#FFD700;"></i><strong> Email:</strong> <a href="mailto:prasadghavghave0@gmail.com">prasadghavghave0@gmail.com</a></p>
-          <p><i class="fas fa-phone icon" style="color:#FFD700;"></i><strong> Phone:</strong> +91 9322860752</p>
-          <p><i class="fab fa-github icon" style="color:#FFD700;"></i><strong> GitHub:</strong> <a href="https://github.com/prasad-ghavghave">github.com/prasad-ghavghave</a></p>
-          <p><i class="fab fa-linkedin icon" style="color:#FFD700;"></i><strong> LinkedIn:</strong> <a href="https://www.linkedin.com/in/prasad-ghavghave">linkedin.com/in/prasad-ghavghave</a></p>
-          <p><i class="fas fa-graduation-cap icon" style="color:#FFD700;"></i><strong> Google Scholar:</strong> <a href="https://scholar.google.com/citations?user=5gWoDTUAAAAJ&hl=en">View Profile</a></p>
+          <p><i class="fas fa-envelope icon" style="color:#FFD700;"></i><strong>Email:</strong> <a href="mailto:prasadghavghave0@gmail.com">prasadghavghave0@gmail.com</a></p>
+          <p><i class="fas fa-phone icon" style="color:#FFD700;"></i><strong>Phone:</strong> +91 9322860752</p>
+          <p><i class="fab fa-github icon" style="color:#FFD700;"></i><strong>GitHub:</strong> <a href="https://github.com/prasad-ghavghave">github.com/prasad-ghavghave</a></p>
+          <p><i class="fab fa-linkedin icon" style="color:#FFD700;"></i><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/prasad-ghavghave">linkedin.com/in/prasad-ghavghave</a></p>
+          <p><i class="fas fa-graduation-cap icon" style="color:#FFD700;"></i><strong>Google Scholar:</strong> <a href="https://scholar.google.com/citations?user=5gWoDTUAAAAJ&hl=en">View Profile</a></p>
         </div>
         <form action="https://formsubmit.co/prasadghavghave0@gmail.com" method="POST" class="glass-card p-6 rounded-xl space-y-4">
           <div><label>Name</label><input name="name" required class="w-full p-2 rounded bg-gray-800 border border-gray-600 text-white focus:ring-[#FFD700]" placeholder="Your Name"/></div>
@@ -176,17 +139,15 @@
         </form>
       </div>
     </section>
-
   </main>
 
-  <!-- Footer -->
   <footer class="bg-gray-800 text-gray-400 py-6 mt-16" data-aos="fade-up">
     <div class="max-w-6xl mx-auto text-center">
       <p>&copy; 2025 <strong>Prasad S. Ghavghave</strong>. All rights reserved.</p>
     </div>
   </footer>
 
-  <!-- Typing Text Script -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init({ once: false, mirror: true, duration: 1000 });
     const roles = ["AIML Engineer ", "Data Analytics Engineer "];
@@ -202,13 +163,77 @@
     document.addEventListener("DOMContentLoaded", type);
   </script>
 
-  <!-- ✅ Chatbot Embed Script -->
+  <!-- Chatbot (Chatbase Embed) -->
+<script>
+  window.chatbaseConfig = {
+    chatbotId: "6g4XQ1XY2ajdt0UTcNv7q",
+  }
+</script>
+<script
+  src="https://www.chatbase.co/embed.min.js"
+  id="chatbase-script"
+  defer>
+</script>
+  <!-- Typing Text Script -->
+  <script>
+    // your typing animation code here
+  </script>
+
+  <!-- Chatbot (Chatbase Embed) -->
   <script>
     window.chatbaseConfig = {
-      chatbotId: "6g4XQ1XY2ajdt0UTcNv7q"
-    };
+      chatbotId: "6g4XQ1XY2ajdt0UTcNv7q",
+    }
   </script>
-  <script src="https://www.chatbase.co/embed.min.js" defer></script>
+  <script
+    src="https://www.chatbase.co/embed.min.js"
+    id="chatbase-script"
+    defer>
+  </script>
+<!-- 💬 Custom Floating Chatbot Button + Modal -->
+<button id="chatbotBtn">💬 Chat with Me</button>
+
+<div id="chatbotModal" class="fixed inset-0 hidden bg-black bg-opacity-60 z-50 items-center justify-center">
+  <div id="chatbotIframeContainer" class="relative w-[95%] max-w-3xl h-[85vh] bg-white rounded-xl overflow-hidden shadow-lg">
+    <button id="closeChatbot" class="absolute top-2 right-4 text-xl font-bold text-black">✖</button>
+    <iframe
+      src="https://www.chatbase.co/chatbot-iframe/6g4XQ1XY2ajdt0UTcNv7q"
+      width="100%"
+      height="100%"
+      style="border: none"
+    ></iframe>
+  </div>
+</div>
+
+<style>
+  #chatbotBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #FFD700;
+    color: #1e1e2f;
+    border: none;
+    padding: 12px 18px;
+    font-weight: bold;
+    border-radius: 50px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    cursor: pointer;
+    z-index: 40;
+  }
+</style>
+
+<script>
+  const chatbotBtn = document.getElementById("chatbotBtn");
+  const chatbotModal = document.getElementById("chatbotModal");
+  const closeChatbot = document.getElementById("closeChatbot");
+
+  chatbotBtn.addEventListener("click", () => chatbotModal.classList.remove("hidden"));
+  closeChatbot.addEventListener("click", () => chatbotModal.classList.add("hidden"));
+  window.addEventListener("click", (e) => {
+    if (e.target === chatbotModal) chatbotModal.classList.add("hidden");
+  });
+</script>
 
 </body>
 </html>
+
