--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <!-- 19 Certificate Cards -->
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-certificate text-3xl text-yellow-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Certificate of Presentation</h3></div>
-          <a href="certs/1.Certificate of Presentation.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Certificate of Presentation.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-code text-3xl text-green-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Python Functions & Dictionaries</h3></div>
