--- a/index.html
+++ b/index.html
@@ -131,75 +131,75 @@
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-code text-3xl text-green-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Python Functions & Dictionaries</h3></div>
-          <a href="certs/2.Python Functions, Files, and Dictionaries.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Python Functions, Files, and Dictionaries.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-robot text-3xl text-pink-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Generative AI</h3></div>
-          <a href="certs/3.Generative AI Elevate your Software Development.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Generative AI Elevate your Software Development.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fab fa-github text-3xl text-white mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Git & GitHub</h3></div>
-          <a href="certs/4.Getting Started with Git and GitHub.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Getting Started with Git and GitHub.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-brain text-3xl text-purple-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">AI with Flask</h3></div>
-          <a href="certs/5.Developing AI Applications with Python and Flask.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Developing AI Applications with Python and Flask.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-network-wired text-3xl text-blue-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Microservices</h3></div>
-          <a href="certs/6. Application Development using Microservices and.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Application Development using Microservices and.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-comments text-3xl text-yellow-300 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Python Chatbot</h3></div>
-          <a href="certs/7.Customer Service with PythonBuild a Chatbot.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Customer Service with PythonBuild a Chatbot.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fab fa-node-js text-3xl text-green-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Node.js Backend I</h3></div>
-          <a href="certs/8.Developing Back End Apps with Node js and.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Developing Back End Apps with Node js and.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fab fa-python text-3xl text-white mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Django + SQL</h3></div>
-          <a href="certs/9.Django Application Development with SQL and.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Django Application Development with SQL and.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-server text-3xl text-orange-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Node.js Backend II</h3></div>
-          <a href="certs/10.Developing Back-End Apps with Node.js and.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Developing Back-End Apps with Node.js and.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fab fa-react text-3xl text-cyan-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">React Front-End</h3></div>
-          <a href="certs/11.Developing Front-End Apps with React.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Developing Front-End Apps with React.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-layer-group text-3xl text-pink-300 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Full Stack Capstone</h3></div>
-          <a href="certs/12.Full Stack Application Development Capstone.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Full Stack Application Development Capstone.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-check-circle text-3xl text-green-300 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Developer Assessment</h3></div>
-          <a href="certs/13.Full Stack Software Developer Assessment.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Full Stack Software Developer Assessment.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-cloud text-3xl text-blue-300 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Cloud Computing</h3></div>
-          <a href="certs/14.Introduction to Cloud Computing.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Introduction to Cloud Computing.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fab fa-docker text-3xl text-blue-200 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Docker & K8s</h3></div>
-          <a href="certs/15.Introduction to Containers w Docker Kubernetes.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Introduction to Containers w Docker Kubernetes.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fab fa-html5 text-3xl text-red-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">HTML, CSS, JS</h3></div>
-          <a href="certs/16.Introduction to HTML, CSS & JavaScript.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Introduction to HTML, CSS & JavaScript.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-laptop-code text-3xl text-indigo-400 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Software Engineering</h3></div>
-          <a href="certs/17. Introduction to Software Engineering.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/ Introduction to Software Engineering.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-keyboard text-3xl text-green-200 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Programming Basics</h3></div>
-          <a href="certs/18.Programming for Everybody (Getting Started with.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Programming for Everybody (Getting Started with.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
         <div class="swiper-slide glass-card p-6 rounded-2xl text-center w-64 h-64 flex flex-col justify-between">
           <div><i class="fas fa-briefcase text-3xl text-yellow-300 mb-3"></i><h3 class="text-white font-semibold text-base mb-2">Career & Interview Guide</h3></div>
-          <a href="certs/19.Software Developer Career Guide and Interview.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
+          <a href="Certification/Software Developer Career Guide and Interview.pdf" target="_blank" class="mt-4 py-1 px-3 rounded bg-yellow-400 text-black font-bold text-sm">View Certificate</a>
         </div>
       </div>
 
